# sardax

./: Cargo.toml  README.md  index.html
.github/: dependabot.yml
docs/: combat.md  design-ideas.md  enemies.md  feature-requests.md  fire.md  gamedesign.md  known-bugs.md  stats.md  todo.md
raws/: spawns.json
resources/prefabs/: goblin_fire.xp
resources/wfc/: basic_cells.xp  basic_cells1.xp
src/: components.rs  constants.rs  damage_system.rs  gamesystem.rs  main.rs  player.rs  random_table.rs  saveload_system.rs  spawner.rs  vision.rs
src/combat/: damage_system.rs  mod.rs  stats.rs
src/effects/: damage.rs  hunger.rs  mod.rs  particles.rs  status.rs  triggers.rs
src/gamelog/: logstore.rs
src/gui/: game_over_menu.rs  hud.rs  item_render.rs  main_menu.rs  ranged_target.rs  tooltips.rs
src/map/: camera.rs  dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: mod.rs  simple_map.rs
src/map_builders/algorithms/: bsp_dungeon.rs  cellular_automata.rs  dla.rs  drunkard.rs  maze.rs  mod.rs  rex_image.rs  voronoi.rs  voronoi_spawning.rs
src/map_builders/prefab_builder/: mod.rs  prefab_rooms.rs  prefab_sections.rs
src/map_builders/utility/: amulet_spawner.rs  mod.rs  (+17 more)
src/raws/: item_structs.rs  mob_structs.rs  mod.rs  prop_structs.rs  rawmaster.rs  rex_assets.rs  spell_structs.rs  weapon_traits.rs
src/systems/: combat_system.rs  duration_system.rs  hunger_system.rs  inventory_system.rs  map_indexing_system.rs  mod.rs  movement_system.rs  particle_system.rs  trigger_system.rs  turn_end_system.rs
wasm/: rust-roguelike.js  rust-roguelike_bg.wasm
(+13 files in other folders)
